# MA-VLA

./: .gitignore  CLAUDE.local.md  CLAUDE.md  EVALUATION_STRATEGY.md  MORPHOLOGY_SYNTHESIS_FINAL.md  MORPHOLOGY_SYNTHESIS_FORMAT_v1.0.md  README.md  TODO_LIBERO_SETUP.md  activate_openpi_official.sh  backup_project.sh  launch_soft_arm_training.sh  openpi_soft_arm_adapter.py  openpi_soft_arm_config.py  openpi_soft_arm_dataloader.py  pipline.md  run_4dof_soft_arm_synthesis.sh  run_soft_arm_8gpu.sh  run_soft_arm_synthesis_4dof.py  run_soft_arm_synthesis_production.py  setup_openpi_environment.sh  setup_openpi_official.sh  soft_arm.cpp  synthesis_full_log.txt  test_4dof_constraint.py  train_soft_arm_openpi.py  train_soft_arm_openpi_8gpu.py  workspace_analysis.py  软体臂4DOF约束合成系统设计.md
参考模型/RynnEC/: .gitignore  README.md  pyproject.toml  requirements.txt
参考模型/RynnEC/benchmark/: metrics.py  readme.md  utils.py
参考模型/RynnEC/benchmark/dataloader/: __init__.py  cog_dataloader.py  seg_dataloader.py
参考模型/RynnEC/evaluation/: eval_cognition.py  eval_seg.py
参考模型/RynnEC/inference/: gradio_demo.py  visualize_mask.py
参考模型/RynnEC/inference/notebooks/: 1.object_understanding.ipynb  2.spatial_understanding.ipynb  3.object_segmentation.ipynb
参考模型/RynnEC/rynnec/: __init__.py  constants.py  mm_utils.py  rynnec_trainer.py  train.py
参考模型/RynnEC/rynnec/model/: __init__.py  encoder.py  loss.py  processor.py  projector.py  region_encoder.py  rynnec_arch.py  rynnec_qwen2.py  sam2.py  sam2_train.py  utils.py
参考模型/RynnEC/scripts/eval/: eval_object_property.sh  eval_seg.sh  eval_spatial.sh
参考模型/RynnEC/scripts/train/: stage1.sh  (+3 more)
参考模型/RynnEC/tools/: merge_lora_weights.py
(+1834 files in other folders)
